# langchain-google-bigtable-python

./: .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  renovate.json5  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  conf.py  document_loader.ipynb  get_table_and_execute_query.ipynb  index.rst  key_value_store.ipynb  vector_store.ipynb
docs/langchain_google_bigtable/: engine.rst  history.rst  key_value_store.rst  loader.rst  vector_store.rst
src/langchain_google_bigtable/: __init__.py  async_key_value_store.py  async_vector_store.py  chat_message_history.py  common.py  document_loader.py  engine.py  execute_query_tool.py  execute_query_tools.py  get_instances_and_table_schema_tool.py  key_value_store.py  loader.py  test_chat_message_history.py  test_document_loader.py  vector_store.py  version.py
src/test/: test_chat_message_history.py  test_document_loader.py
tests/: conftest.py  get_table_and_execute_query.ipynb  key_value_store.py  test_async_key_value_store.py  test_async_vector_store_advanced.py  test_async_vector_store_core.py  test_bigtable_chat_message_history.py  test_bigtable_loader.py  test_btql_query_builder.py  test_engine.py  test_execute_query_tool.py  test_execute_query_tools.py  test_get_instances_and_table_schema_tool.py  test_key_value_store.py  test_vector_store.py
