[project]
name = "langchain-google-bigtable"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Bigtable"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.1, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "google-cloud-bigtable>=2.22.0, <3.0.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_bigtable.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-bigtable-python"
Repository = "https://github.com/googleapis/langchain-google-bigtable-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-bigtable-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-bigtable-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==23.12.1",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest-asyncio==0.23.5.post1",
    "pytest==8.2.1"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true

exclude = [
    'docs/*',
    'noxfile.py'
]

[[tool.mypy.overrides]]
module="google.cloud.*"
ignore_missing_imports = true